# internet-of-agents-agri-automation-skeleton

./: CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/edge_agent/: main.py
apps/mcp_server/: main.py
apps/orchestrator/: main.py
configs/agents/: carbon-agent.yaml  field-monitor-agent.yaml  safety-agent.yaml  uav-mission-agent.yaml
configs/policies/: safety_policy.yaml
docs/: CITATIONS.md  api.md  architecture.md  deployment.md  security.md  user_reuse_guide.md
examples/field-crop-carbon/: boundary.geojson  farm_profile.yaml
examples/quickstart/: simulation.py
k8s/base/: api-deployment.yaml  configmap.yaml  secret.example.yaml
prompts/: agent-runtime-prompt.md  farm-onboarding-prompt.md  repo-builder-prompt.md
schemas/: action_request.schema.json  agent_card.schema.json  carbon_event.schema.json  mission.schema.json  telemetry_event.schema.json
scripts/: bootstrap.sh  seed_agents.py
tests/: test_models.py  test_policy.py
