[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-agent-mesh"
version = "0.1.0"
description = "A production-oriented Internet of Agents skeleton for agriculture automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AgriAgentMesh Contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "paho-mqtt>=2.1",
  "redis>=5.0",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "structlog>=24.1",
  "python-jose[cryptography]>=3.3",
  "tenacity>=8.5",
]

[project.optional-dependencies]
providers = [
  "openai>=1.99",
  "anthropic>=0.64",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
pythonpath = [".", "packages"]

testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
